# ToDate

./: README.md  ToDate-ADR-0001-Authentication.md  ToDate-ADR-0002-Tech-Stack.md  ToDate-API-Contract.md  ToDate-Compliance-Background-Checks.md  ToDate-Data-Model.md  ToDate-Entitlements-Matrix.md  ToDate-Security-Data-Classification.md  ToDate-Vendor-Selection.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: config.py  db.py  deps.py  main.py  models.py
backend/app/common/: base.py  enums.py  security.py
backend/app/modules/entitlements/: catalog.py  models.py  router.py  schemas.py  service.py
backend/app/modules/identity/: models.py  router.py  schemas.py  service.py
backend/app/modules/intelligent/: models.py  router.py  schemas.py  service.py
backend/app/modules/matchmaking/: models.py  router.py  schemas.py  service.py
backend/app/modules/structured/: models.py  router.py  schemas.py  service.py
backend/app/modules/verification/: models.py  router.py  stub.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py
backend/tests/: conftest.py  test_smoke.py
docs/: README.md
docs/adr/: 0001-authentication.md  0002-tech-stack.md
docs/architecture/: api-contract.md  data-model.md  overview.md  security.md
docs/compliance/: background-checks.md
docs/product/: entitlements-matrix.md
docs/vendors/: vendor-selection.md
